[gd_scene load_steps=19 format=3 uid="uid://co7rjdayna4x1"]

[ext_resource type="Script" uid="uid://co0d62csk3rkx" path="res://UI/main.gd" id="1_0xm2m"]
[ext_resource type="Theme" uid="uid://cbwkyl6gws1s2" path="res://themes/text.tres" id="3_h2yge"]
[ext_resource type="Texture2D" uid="uid://h1dswrrvmamt" path="res://assets/icons/2B06.svg" id="3_ih1d4"]
[ext_resource type="PackedScene" uid="uid://b0grwnfu5eswx" path="res://UI/edit_default.tscn" id="4_dyfb5"]
[ext_resource type="Texture2D" uid="uid://c16nujgxaod31" path="res://assets/icons/2B07.svg" id="4_p2g6k"]
[ext_resource type="PackedScene" uid="uid://dqcvyjs7cm0ag" path="res://UI/load.tscn" id="5_deq60"]
[ext_resource type="Texture2D" uid="uid://xpaecgeeo52y" path="res://assets/icons/1F4CE.svg" id="5_nkf2w"]
[ext_resource type="PackedScene" uid="uid://saxa07e7imcq" path="res://UI/save.tscn" id="6_6sydh"]
[ext_resource type="Texture2D" uid="uid://dtx5ywlhyeolt" path="res://assets/icons/1F4C2.svg" id="6_vfltm"]
[ext_resource type="PackedScene" uid="uid://dick833futlmw" path="res://UI/info_panel.tscn" id="7_eto42"]
[ext_resource type="Texture2D" uid="uid://cndegju73vc01" path="res://assets/icons/270F.svg" id="7_p4xe3"]
[ext_resource type="Texture2D" uid="uid://3fbaselx8quo" path="res://assets/icons/2753.svg" id="8_5n8ge"]
[ext_resource type="Texture2D" uid="uid://dgg1vkgdhk1s2" path="res://assets/icons/1F4C7.svg" id="9_5n8ge"]
[ext_resource type="Texture2D" uid="uid://ciwck123ijc35" path="res://assets/icons/E262.svg" id="9_m2ejq"]
[ext_resource type="Texture2D" uid="uid://c8c2cd58iydhu" path="res://assets/icons/26A0.svg" id="10_p2g6k"]
[ext_resource type="PackedScene" uid="uid://be01euvj63p6q" path="res://UI/logs_panel.tscn" id="16_vfltm"]
[ext_resource type="PackedScene" uid="uid://dpb7iq8xorvje" path="res://UI/tracker_manager_panel.tscn" id="17_p4xe3"]
[ext_resource type="PackedScene" uid="uid://b6cb8gast6vq1" path="res://UI/t_manager_edit_panel.tscn" id="18_5n8ge"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_h2yge")
text = "  Óâ°  "
alignment = 0
item_count = 9
popup/item_0/text = "INCREASE_UI"
popup/item_0/icon = ExtResource("3_ih1d4")
popup/item_0/id = 0
popup/item_1/text = "DECREASE_UI"
popup/item_1/icon = ExtResource("4_p2g6k")
popup/item_1/id = 1
popup/item_2/text = "SAVE"
popup/item_2/icon = ExtResource("5_nkf2w")
popup/item_2/id = 2
popup/item_3/text = "LOAD_PRESET"
popup/item_3/icon = ExtResource("6_vfltm")
popup/item_3/id = 3
popup/item_4/text = "EDIT_DEFAULT"
popup/item_4/icon = ExtResource("7_p4xe3")
popup/item_4/id = 4
popup/item_5/text = "TRACKER_MANAGER"
popup/item_5/icon = ExtResource("9_5n8ge")
popup/item_5/id = 5
popup/item_6/text = "HELP"
popup/item_6/icon = ExtResource("8_5n8ge")
popup/item_6/id = 6
popup/item_7/text = "DELETE_ALL"
popup/item_7/icon = ExtResource("9_m2ejq")
popup/item_7/id = 7
popup/item_8/text = "QUIT"
popup/item_8/icon = ExtResource("10_p2g6k")
popup/item_8/id = 8

[node name="LanguageSelector" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="LangMenuButton" type="MenuButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/LanguageSelector"]
layout_mode = 2
theme = ExtResource("3_h2yge")
text = "  üåê  "
alignment = 0
item_count = 1
popup/item_0/text = "System"
popup/item_0/id = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h2yge")
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddDice" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 3
theme = ExtResource("3_h2yge")
text = "Óâüüé≤"

[node name="LogsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 3
theme = ExtResource("3_h2yge")
text = "  üìë  "

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AllDice" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AllTrackers" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButtonMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/AllTrackers"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/AllTrackers/AddButtonMargin"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("3_h2yge")
text = "
Óâü

"

[node name="EditDefaultPanel" parent="." instance=ExtResource("4_dyfb5")]
visible = false
layout_mode = 1

[node name="LoadPanel" parent="." instance=ExtResource("5_deq60")]
visible = false
layout_mode = 1

[node name="SavePanel" parent="." instance=ExtResource("6_6sydh")]
visible = false
layout_mode = 1

[node name="InfoPanel" parent="." instance=ExtResource("7_eto42")]
visible = false
layout_mode = 1

[node name="LogsPanel" parent="." instance=ExtResource("16_vfltm")]
visible = false
layout_mode = 1

[node name="TrackerManagerPanel" parent="." instance=ExtResource("17_p4xe3")]
visible = false
layout_mode = 1

[node name="TManagerEditPanel" parent="." instance=ExtResource("18_5n8ge")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/AddDice" to="." method="_on_add_dice_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/LogsButton" to="." method="_on_logs_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/AllTrackers/AddButtonMargin/AddButton" to="." method="_on_add_button_pressed"]
